# format-olca-json

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
hooks/: __init__.py  format_olca_json.py
