[project]
name = "format-olca-json"
description = "Pre-commit hook to standardize openLCA JSON formatting"
requires-python = ">= 3.11"
dependencies = [ ]
authors = [
  {name = "Andrew Beck", email = "andrew.beck@erg.com"}
]
dynamic = [
  "version",
]

[project.scripts]
format-olca-json = "hooks.format_olca_json:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "hooks/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["hooks"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.environments]
dev = ["dev"]

[tool.pixi.feature.dev.dependencies]
pre-commit = "*"
